appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Tags"
    timeout: 3000
- tapOn:
    text: "Tags"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TagsList"
    timeout: 10000
- tapOn:
    id: "com.beememorybank.mobile:id/TagsSearchBar"
- inputText: "fiction"
- extendedWaitUntil:
    visible:
      text: "fiction"
    timeout: 3000
- tapOn:
    text: "⋮"
- extendedWaitUntil:
    visible:
      text: "Rename"
    timeout: 3000
- tapOn:
    text: "Rename"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/PopupInputEntry"
    timeout: 5000
- tapOn:
    id: "com.beememorybank.mobile:id/PopupInputEntry"
- eraseText: 7
- inputText: "fiction-renamed"
- tapOn:
    id: "com.beememorybank.mobile:id/PopupAcceptButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TagsList"
    timeout: 30000
- tapOn:
    id: "com.beememorybank.mobile:id/TagsSearchBar"
- eraseText: 7
- inputText: "fiction-renamed"
- extendedWaitUntil:
    visible:
      text: "fiction-renamed"
    timeout: 3000
- assertVisible:
    text: "fiction-renamed"
- takeScreenshot: tag_renamed
- tapOn:
    text: "⋮"
- extendedWaitUntil:
    visible:
      text: "Rename"
    timeout: 3000
- tapOn:
    text: "Rename"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/PopupInputEntry"
    timeout: 5000
- tapOn:
    id: "com.beememorybank.mobile:id/PopupInputEntry"
- eraseText: 15
- inputText: "fiction"
- tapOn:
    id: "com.beememorybank.mobile:id/PopupAcceptButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TagsList"
    timeout: 30000
- takeScreenshot: tag_restored
