appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Tags"
    timeout: 30000
- tapOn:
    text: "Tags"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TagsList"
    timeout: 30000
- scrollUntilVisible:
    element:
      text: "sci-fi"
    direction: DOWN
    timeout: 30000
- tapOn:
    text: "sci-fi"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TagArticlesList"
    timeout: 30000
- assertVisible:
    text: "The Matrix"
- takeScreenshot: tag_to_articles
